[B]Version 0.1.1[/B]
    * bug: fixed default filehoster

[B]Version 0.1.0[/B]
    * Initial release